fix chronicle map unit tests