@@ -92,11 +92,24 @@ allprojects {
     }
 
     test {
+        def args = []
         if (project.hasProperty('tests.timeout.multiplier')) {
-            jvmArgs = ["-Dtests.timeout.multiplier=${project.property('tests.timeout.multiplier')}"]
+            args = ["-Dtests.timeout.multiplier=${project.property('tests.timeout.multiplier')}"]
         }
+        // https://chronicle.software/chronicle-support-java-17/
+        args +=  ["--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+                  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+                  "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+                  "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                  "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+                  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                  "--add-opens=java.base/java.io=ALL-UNNAMED",
+                  "--add-opens=java.base/java.util=ALL-UNNAMED"]
+        jvmArgs = args
     }
 }
+
 
 configure(subprojects - project(':integration')) {
     apply plugin: 'jacoco'
